--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ dependencies:
   get: ^4.6.5
   flutter:
     sdk: flutter
-  #google_maps_flutter: ^2.1.9
+  google_maps_flutter: ^2.1.9
 
 
   # The following adds the Cupertino Icons font to your application.
